[package]
name = "burn-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tower-lsp = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
path-absolutize = "3.1"
tempfile = "3.9"
url = "2.5.4"
